// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefaultView > should render > read more > with read more link 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        titleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-description"
    >
      <span
        class="react-cookienotice-label"
      >
        descriptionLabel
      </span>
    </div>
    <div
      class="react-cookienotice-read-more"
    >
      <a
        class="react-cookienotice-link"
        href="readMoreLink"
        rel="noreferrer"
        target="_blank"
      >
        readMoreLabel
      </a>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      declineAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptAllButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`DefaultView > should render > read more > without read more link 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        titleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-description"
    >
      <span
        class="react-cookienotice-label"
      >
        descriptionLabel
      </span>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      declineAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptAllButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`DefaultView > should render > services > with services 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        titleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-description"
    >
      <span
        class="react-cookienotice-label"
      >
        descriptionLabel
      </span>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      declineAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      customizeButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptAllButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`DefaultView > should render > services > with services empty 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        titleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-description"
    >
      <span
        class="react-cookienotice-label"
      >
        descriptionLabel
      </span>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      declineAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptAllButtonLabel
    </button>
  </div>
</DocumentFragment>
`;

exports[`DefaultView > should render > services > without services 1`] = `
<DocumentFragment>
  <div
    class="react-cookienotice-body"
  >
    <div
      class="react-cookienotice-title"
    >
      <span
        class="react-cookienotice-label"
      >
        titleLabel
      </span>
    </div>
    <div
      class="react-cookienotice-description"
    >
      <span
        class="react-cookienotice-label"
      >
        descriptionLabel
      </span>
    </div>
  </div>
  <div
    class="react-cookienotice-buttons"
  >
    <button
      class="react-cookienotice-button"
    >
      declineAllButtonLabel
    </button>
    <button
      class="react-cookienotice-button"
    >
      acceptAllButtonLabel
    </button>
  </div>
</DocumentFragment>
`;
